# ns-splatfacto

./: README.md  pyproject.toml
nerfstudio/configs/: experiment_config.py
nerfstudio/data/: scene_box.py
nerfstudio/engine/: trainer.py
nerfstudio/scripts/: create_transforms.py  splatfacto.py
nerfstudio/scripts/downloads/: download_data.py
nerfstudio/utils/: eval_utils.py
tests/process_data/: test_process_images.py
